# JetAudioPlayer

./: README.md
app/: build.gradle
app/src/androidTest/java/com/bailun/kai/jetaudioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  AudioCodec.cpp  AudioCodec.h  AudioCore.cpp  AudioCore.h  AudioNativePlayer.cpp  AudioNativePlayer.h  CMakeLists.txt  PlayerCallback.cpp  PlayerCallback.h  native-lib.cpp
app/src/main/java/com/bailun/kai/jetaudioplayer/: AudioPlayer.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bailun/kai/jetaudioplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
